# sqliteprebuilt

./: README.md
android/: build.sh
android/jni/: Android.mk  Application.mk
cmake/: CMakeLists.txt
cmake/build-osx/: libsqlite.dylib  libsqlitecpp.dylib
